# stopes

./: pyproject.toml
src/stopes/pipelines/monolingual/: language_scripts_200.tsv
